--- a/client/src/app/feed-source-page/feed-source-item/feed-source-item.component.css
+++ b/client/src/app/feed-source-page/feed-source-item/feed-source-item.component.css
@@ -6,13 +6,16 @@
 
 .url {
   width: 100%;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .name {
   flex-shrink: 0;
   display: inline-block;
   width: 150px;
-  overflow: hidde;
+  padding-right: 5px;
+  overflow: hidden;
   text-overflow: ellipsis;
 }
 
