--- a/client/src/app/feed-source-page/feed-source-item/feed-source-item.component.html
+++ b/client/src/app/feed-source-page/feed-source-item/feed-source-item.component.html
@@ -4,4 +4,6 @@
 
 <span class="url">{{ source.url }}</span>
 
-<button class="remove-button" mat-button (click)="remove()" color="warn">Remove</button>
+<button class="remove-button" mat-button (click)="remove()" color="warn">
+  Remove
+</button>
