--- a/client/src/app/feed-source-page/feed-source-creater/feed-source-creater.component.html
+++ b/client/src/app/feed-source-page/feed-source-creater/feed-source-creater.component.html
@@ -1,4 +1,9 @@
-<button *ngIf="!showForm" class="create-button" mat-mini-fab (click)="showForm = true">
+<button
+  *ngIf="!showForm"
+  class="create-button"
+  mat-mini-fab
+  (click)="showForm = true"
+>
   <fa-icon class="plus" [icon]="faPlus"></fa-icon>
 </button>
 
