--- a/client/src/app/aside/aside.component.css
+++ b/client/src/app/aside/aside.component.css
@@ -11,6 +11,13 @@
   background-color: #fff0e1;
 }
 
+.source-favicon {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  vertical-align: middle;
+}
+
 .ng-fa-icon {
   width: 25px;
   flex-shrink: 0;
