--- a/client/src/app/aside/aside.component.html
+++ b/client/src/app/aside/aside.component.html
@@ -9,7 +9,7 @@
     routerLinkActive="active"
     [routerLink]="'/feed/' + category.id"
   >
-    <img [src]="category.faviconUrl" />
+    <img class="source-favicon" [src]="category.faviconUrl" />
     <span class="category-name" [matTooltip]="category.name">{{
       category.name
     }}</span>
