add border bottom for item

--- a/client/src/app/feed-list/feed-list.component.css
+++ b/client/src/app/feed-list/feed-list.component.css
@@ -33,6 +33,7 @@
   height: auto !important;
   box-sizing: border-box;
   cursor: pointer;
+  border-bottom: 1px solid #f0f0f0;
 }
 
 ::ng-deep .mat-list-item-content {
