initial add feed source moal

--- a/client/src/app/aside/aside-top-bar/aside-top-bar.component.html
+++ b/client/src/app/aside/aside-top-bar/aside-top-bar.component.html
@@ -1,4 +1,4 @@
-<div class="add">
+<div class="add" (click)="openAddFeedSourceDialog()">
   <fa-icon size="1x" [icon]="faPlus"></fa-icon>
   <span>ADD</span>
 </div>
