--- a/client/src/app/component/input/input.component.html
+++ b/client/src/app/component/input/input.component.html
@@ -1,3 +1,2 @@
-<p>
-  input works!
-</p>
+<fa-icon *ngIf="icon" size="1x" [icon]="iconMap[icon]"></fa-icon>
+<input type="text" [formControl]="control" />
