--- a/client/src/app/component/dialog-header/dialog-header.component.html
+++ b/client/src/app/component/dialog-header/dialog-header.component.html
@@ -1,3 +1,8 @@
-<p>
-  dialog-header works!
-</p>
+<span>{{ title }}</span>
+
+<fa-icon
+  (click)="handleClose()"
+  *ngIf="closeable"
+  size="1x"
+  [icon]="faTimesCircle"
+></fa-icon>
