fix client tests

--- a/client/src/app/add-feed-source-modal/add-feed-source-modal.component.html
+++ b/client/src/app/add-feed-source-modal/add-feed-source-modal.component.html
@@ -1,7 +1,7 @@
 <app-dialog-header
   title="Add feed"
   [closeable]="true"
-  [onClose]="handleClose"
+  [closeFn]="handleClose"
 ></app-dialog-header>
 
 <form [formGroup]="form">
