--- a/client/src/app/component/input/input.component.html
+++ b/client/src/app/component/input/input.component.html
@@ -5,4 +5,4 @@
   [style.color]="iconColor"
 ></fa-icon>
 
-<input type="text" [formControl]="control" [placeholder]="placeholder" />
+<input [type]="type" [formControl]="control" [placeholder]="placeholder" />
