--- a/client/src/app/component/button/button.component.html
+++ b/client/src/app/component/button/button.component.html
@@ -1,2 +1,2 @@
 
-<button class="button-wrapper"><ng-content></ng-content></button>
+<button [type]="htmlType" class="button-wrapper"><ng-content></ng-content></button>
