--- a/client/src/app/login-page/login-page.component.html
+++ b/client/src/app/login-page/login-page.component.html
@@ -5,7 +5,7 @@
         <app-input
           placeholder="Username"
           formControlName="username"
-          icon="faLink"
+          icon="faUser"
           iconColor="#fa9d65"
         ></app-input>
       </app-form-field>
@@ -15,12 +15,12 @@
           placeholder="Password"
           formControlName="password"
           type="password"
-          icon="faLink"
+          icon="faKey"
           iconColor="#fa9d65"
         ></app-input>
       </app-form-field>
 
-      <app-button type="primary" (click)="handleLogin()">
+      <app-button htmlType="submit" type="primary" (click)="handleLogin()">
         Login
       </app-button>
     </form>
