--- a/client/src/app/aside/aside-top-bar/aside-top-bar.component.css
+++ b/client/src/app/aside/aside-top-bar/aside-top-bar.component.css
@@ -2,15 +2,30 @@
   display: block;
   height: 35px;
   line-height: 35px;
+  padding: 18px 18px 12px 10px;
 }
 
-.add {
-  color: #4f9cf4;
-  cursor: pointer;
-  padding-left: 12px;
-}
-.add span {
-  margin-left: 4px;
-  font-size: 14px;
+.heading {
+  font-size: 20px;
   font-weight: bold;
+  color: #333;
+  cursor: pointer;
+}
+
+.heading fa-icon {
+  display: inline-block;
+  vertical-align: middle;
+  color: #777;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.search-container {
+  cursor: pointer;
+  padding: 3px;
+  color: #555;
 }
