refactor aside component

--- a/client/src/app/article-avatar/article-avatar.component.html
+++ b/client/src/app/article-avatar/article-avatar.component.html
@@ -1,7 +1,10 @@
 <div
   class="article-avatar"
-  [style.backgroundColor]="hasImage ? 'transparent' : bgColor"
+  [style.backgroundColor]="bgColor"
 >
   <div class="source-name">{{ feed.source.name }}</div>
-  <img #image *ngIf="hasImage" [src]="imgSrc" (error)="hasImage = false" />
+  <img
+    class="source-favicon"
+    [src]="'/api/feed-source/' + feed.source.id + '/favicon'"
+  />
 </div>
