--- a/client/src/app/feed-list/feed-list.component.css
+++ b/client/src/app/feed-list/feed-list.component.css
@@ -43,7 +43,7 @@
 
 .mat-list-item:hover,
 .active {
-  background-color: #4f9cf4 !important;
+  background-color: #fdad28 !important;
   color: white !important;
 }
 
