--- a/client/src/app/article-preview/article-preview-info-area/article-preview-info-area.component.css
+++ b/client/src/app/article-preview/article-preview-info-area/article-preview-info-area.component.css
@@ -3,7 +3,7 @@
   width: calc(100% - 40px);
   background-color: #bbb;
   color: #999;
-  margin: 0 20px 40px;
+  margin: 0 20px 56px;
   font-family: "Open Sans", sans-serif;
   font-weight: 700;
   position: relative;
@@ -36,6 +36,7 @@
   padding: 0 6px;
   cursor: pointer;
   transition: background-color 0.2s;
+  margin-top: 8px;
 }
 
 :host .read-source:hover {
