--- a/client/src/app/component/button/button.component.css
+++ b/client/src/app/component/button/button.component.css
@@ -2,7 +2,7 @@
   display: inline-block;
 } 
 
-.button-wrapper {
+.buttton-element {
   border-radius: 4px;
   border: none;
   box-shadow: none;
@@ -18,13 +18,14 @@
   background-color: #e8e8e8;
   color: #333;
   -webkit-appearance: none;
+  outline: none;
 }
 
-:host.primary .button-wrapper {
+:host.primary .buttton-element {
   background-color: #4f9cf4;
   color: white;
 }
 
-:host.primary:active .button-wrapper {
+:host.primary:active .buttton-element {
   background-color: #2a8dff;
 }
