--- a/client/src/app/aside/aside-top-bar/aside-top-bar.component.html
+++ b/client/src/app/aside/aside-top-bar/aside-top-bar.component.html
@@ -4,7 +4,14 @@
     <fa-icon size="1x" [icon]="faAngleDown"></fa-icon>
   </div>
 
-  <div class="search-container">
-    <fa-icon class="search-icon" size="1x" [icon]="faSearch"></fa-icon>
+
+  <div class="operating-container">
+    <app-button>
+      <fa-icon class="search-icon" size="1x" [icon]="faSearch"></fa-icon>
+    </app-button>
+    <span>
+      <fa-icon class="setting-icon" size="1x" [icon]="faCog"></fa-icon>
+    </span>
   </div>
+
 </div>
