--- a/client/src/app/login-page/login-page.component.html
+++ b/client/src/app/login-page/login-page.component.html
@@ -1,6 +1,11 @@
 <div class="container">
   <div class="panel">
     <form [formGroup]="form">
+
+      <div class="logo-container">
+        <img src="/assets/icon.png" alt="logo">
+      </div>
+
       <h2>Login:</h2>
 
       <app-form-field>
