--- a/client/src/app/component/button/button.component.html
+++ b/client/src/app/component/button/button.component.html
@@ -1,2 +1,2 @@
 
-<button [type]="htmlType" class="buttton-element"><ng-content></ng-content></button>
+<button [type]="htmlType" class="button-element"><ng-content></ng-content></button>
