--- a/client/src/app/component/button/button.component.css
+++ b/client/src/app/component/button/button.component.css
@@ -1,8 +1,8 @@
 :host {
   display: inline-block;
-} 
+}
 
-.buttton-element {
+.button-element {
   border-radius: 4px;
   border: none;
   box-shadow: none;
@@ -19,6 +19,15 @@
   color: #333;
   -webkit-appearance: none;
   outline: none;
+  transition: all 200ms;
+}
+
+:host.transparent .button-element {
+  background-color: transparent;
+}
+
+:host.transparent .button-element:hover {
+  background-color: #e8e8e8;
 }
 
 :host.primary .buttton-element {
